<resources>
    <string name="app_name">Gatunov-v-15</string>
    <string name="appName">Тиндер</string>
    <string name="avatarSignIn">avatar</string>
    <string name="userNameSignIn">Алина Каравалова</string>
    <string name="ageSignIn">20 лет</string>
    <string name="passwordDescSignIn">Введите пароль, чтобы войти в профиль</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number1">1</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number4">4</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number7">7</string>
    <string name="number0">0</string>
    <string name="btnOk">OK</string>
    <string name="btnClear">clear</string>
    <string name="age">21 год</string>
    <string name="status">В сети</string>
    <string name="name">Ксения Иванова</string>
    <string name="message">Напишите сообщение...</string>
    <string name="send">Отправить</string>
    <string name="camera">camera</string>
    <string name="camera2">camera2</string>
    <string name="statusasd">Отзывчивая, добрая, занимаюсь танцами</string>
    <string name="avatar1">T1213O</string>
    <string name="statusico">TO3215DO</string>
    <string name="news">TO5213DO</string>
    <string name="addfriend">TO123123DO</string>
    <string name="addfriend2">T3123ODO</string>
    <string name="sendMess">T5123ODO</string>
    <string name="chat">TO5123DO</string>
    <string name="chat1">chat1</string>
    <string name="like">like</string>
    <string name="profile">profile</string>
</resources>