<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/appName"
        android:textColor=" #4D4242"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="126dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar1"
        android:contentDescription="@string/avatarSignIn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/userNameSignIn"
        android:textColor="#070000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ageSignIn"
        android:textColor=" #4D4242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/passwordDescSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="265dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="1"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPassword3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPassword4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <View
            android:id="@+id/view4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick3"
            android:layout_gravity="end"
            android:background="#FFF59A" />

        <View
            android:id="@+id/view3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="#FFF59A"
            android:onClick="onClick1"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/view6"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick2"
            android:layout_gravity="center"
            android:background="#FFF59A" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/number2"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:text="@string/number3"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/number1"
            android:textColor="#000000"
            android:textSize="24sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <View
            android:id="@+id/view7"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick4"
            android:background="#FFF59A" />

        <View
            android:id="@+id/view8"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick5"
            android:layout_gravity="center"
            android:background="#FFF59A" />

        <View
            android:id="@+id/view9"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick6"
            android:layout_gravity="end"
            android:background="#FFF59A" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/number5"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:text="@string/number6"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/number4"
            android:textColor="#000000"
            android:textSize="24sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <View
            android:id="@+id/view10"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick7"
            android:background="#FFF59A" />

        <View
            android:id="@+id/view11"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick8"
            android:layout_gravity="center"
            android:background="#FFF59A" />

        <View
            android:id="@+id/view12"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="onClick9"
            android:layout_gravity="end"
            android:background="#FFF59A" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/number8"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:text="@string/number9"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/number7"
            android:textColor="#000000"
            android:textSize="24sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4">

        <View
            android:id="@+id/view13"
            android:layout_width="55dp"
            android:onClick="onClickClear"
            android:layout_height="55dp"
            android:background=" #A8CAEA" />

        <View
            android:id="@+id/view14"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:onClick="onClick0"
            android:background="#FFF59A" />

        <View
            android:id="@+id/view15"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:background=" #A8CAEA"
            android:onClick="onClickOk"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/number0"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="11dp"
            android:text="@string/btnOk"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/cross"
            android:contentDescription="@string/btnClear" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>